# surfline_recruitment

./: main.py  pyproject.toml
sessions/: BanthamForecast.csv  README.md  explore.ipynb
surfmodel/: Croyde.csv  README.md
